--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-joyride": "^2.9.3",
     "react-router-dom": "^7.8.1"
   },
   "devDependencies": {
