--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^7.3.1",
     "@mui/system": "^7.3.1",
     "@mui/types": "^7.4.5",
+    "@types/lodash": "^4.17.20",
     "axios": "^1.11.0",
+    "lodash": "^4.17.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
