--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/types": "^7.4.5",
     "@types/lodash": "^4.17.20",
     "axios": "^1.11.0",
+    "jsbarcode": "^3.12.1",
     "lodash": "^4.17.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
